Fotomatic/resources/css/style.css
/* Universal Styles */

html {
  font-family: "Roboto", sans-serif;
  font-size: 16px;
}

body {
  /* border: 1px red solid; */
  width: 100%;
}

.main-content {
  margin-top: 5.3125rem;
  /* border: 1px red solid; */
}

.center {
  text-align: center;
}

.button {
  border-radius: 4px;
  background-color: #4a4a4a;
  color: white;

}

.desktop li a {
  display: inline-flex;
  align-items: center;
}

.image-container {
  overflow: hidden;
}

.image-container img {
  display: block;
  max-width: 100%;
}

@media only screen and (max-width: 760px) {
  .main-content {
    top: 2.5625rem;
  }
}

@media only screen and (max-width: 450px) {
  .main-content {
    margin-top: 3rem;
  }
}

/* Header */

header {
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  right: 0;
  border-bottom: solid 1px #c6c1c1;
  background-color: white;
  height: 5.3125rem;
  border: 1px red solid;
}

header .content {
  display: flex;
  align-items: center;
  padding: 1.875rem;
}

header .logo {
  flex: 1;
  font-family: 'Roboto Mono', Arial, sans-serif;
  color: #4A4A4A;
  font-size: 1.5rem;
  border: 1px red solid;
}

header nav ul {
  display: flex;
  font-family: 'Roboto', Arial, sans-serif;
  color: #4A4A4A;
  font-size: 1rem;
  line-height: 1.6;
}

nav li {
  padding-left: 3.5rem;
}

nav a {
  vertical-align: bottom;
  line-height: 1.6;
  font-size: 1rem;
  color: #4a4a4a;
}

header .icon {
  width: 1rem;
  height: 1rem;
  padding-left: .75rem;
}

header .mobile {
  display: none;
}

@media only screen and (max-width: 760px) {
  header {
    /* display: flex; */
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    width: 100%;
    /* padding: 0 2rem; */
    margin: 0 auto;
    border: 1px red solid;
  }

  header .content {
    justify-content: center;
    gap: 2rem;
    /* padding: .5rem 0; */
    padding-right: 1rem;
  }

  header .desktop {
    display: flex;
    align-items: center;
    border: 1px red solid;
  }
  
  .desktop .icon {
    border: 1px red solid;
    max-width: 100%;
  }

  .mobile img {
    display: none;
  }
  header .mobile {
    display: block;
    border: 1px red solid;
  }
  
  header .mobile li {
    padding: 0;
  }

  header .mobile .button {
    padding: .1875rem .5rem;
    background-color: #9dc20b;
    line-height: 1.6;
    color: white;
    border: 1px red solid;
  }
}

@media only screen and (max-width: 450px) {

  /* .main-content {
    max-width: 450px;
  } */

  header .content {
    /* justify-content: center; */
    /* gap: 0; */
    padding: 0;
    /* padding-right: 1rem; */
  }

  header .logo {
    display: none;
  }

  header .desktop {
    display: none;
  }

  header {
    /* display: flex; */
    /* justify-content: center; */
    align-content: center;
    width: 100%;
    height: 3rem;
    padding: 0;
  }

  header .mobile {
    display: flex;
    /* justify-content: center; */
    /* display: block; */
    height: 2.5rem;
  }

  header nav ul {
    /* justify-content: center; */
    /* width: 100%; */
    /* display: flex; */
    gap: 4.7rem;
    /* height: 2.5rem; */
    align-items: center;
  }
  
  header .mobile li {
    /* margin: 0; */
    /* width: 100%; */
    /* padding: 0; */
  }

  .mobile img {
    display: block;
    height: 1.8rem;
  }

  header .mobile .button {
    margin: 0;
    display: block;
  }

  .mobile li .button {
    padding: 0.1875rem 0.5rem;
    font-size: 1.2rem;
  }
}

/* Sign Up Section */

#sign-up-section {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  height: 43.5rem;
  background-image: url("../images/banner-landingpage.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  /* border: 1px red solid; */
}

#sign-up-cta {
  /* padding: 2rem 5rem 3.5rem 5rem; */
  border: solid 1px #979797;
  border-radius: 4px;
  background-color: #9dc20a;
  margin: 10.625rem 6.25rem;
  border: 1px red solid;
}

#sign-up-cta .content {
  width: 25.625rem;
  margin-top: 2rem;
  margin-bottom: 3.5rem;
  margin-right: 5rem;
  margin-left: 5rem;
  font-family: "Roboto", sans-serif;
  font-size: 1.25rem;
  line-height: 1.4;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  border: 1px red dashed;
}

#sign-up-cta h1 {
  font-size: 3.125rem;
}

#sign-up-cta h2 {
  font-size: 2.25rem;
}

#sign-up-cta span {
  font-weight: bold;
}

#sign-up-cta .cursive {
  font-family: "Damion", cursive;
}

#sign-up-cta .striking {
  font-family: "Rubik", sans-serif;
  font-size: 3.125rem;
  padding-bottom: .75rem;
}

#sign-up-cta .email {
  display: block;
  margin: 0 auto;
  border: 1px red solid;
}

#sign-up-cta .button {
  margin-top: 1.625rem;
  width: 25.5rem;
  height: 4rem;
  border: 1px red solid;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media only screen and (max-width: 760px) {
  #sign-up-section {
    align-items: center;
    justify-content: center;
    height: 28rem;
  }

  #sign-up-cta {
    position: static;
    width: auto;
    height: auto;
    background-color: transparent;
    border: none;
  }

  #sign-up-cta .content {
    margin-top: 0;
  }

  #sign-up-cta .email {
    display: none;
  }

  #sign-up-cta h1 {
    font-size: 3.125rem;
  }

  #sign-up-cta h2 {
    font-size: 2.25rem;
  }
}

@media only screen and (max-width: 450px) {
  #sign-up-section {
    height: 20rem;
    justify-content: center;
    /* width: 450px; */
    /* overflow: hidden; */
  }

  #sign-up-cta {
    margin: 0;
    padding: 0;
  }

  #sign-up-cta .content {
    margin: 0;
    padding: 0;
  }

  #sign-up-cta .email {
    display: none;
  }

  #sign-up-cta .striking {
    font-size: 2.3rem;
  }

  #sign-up-cta h1 {
    /* font-size: 1rem; */
  }

  #sign-up-cta h2 {
    /* font-size: 2rem; */
  }

}

/* Features Section */

#features-section {
  display: flex;
  justify-content: space-between;
  /* gap: 2.375rem; */
  padding: 4rem 5%;
  background-color: #f3f3f3;
  /* height: 39.6875rem; */
  border: 1px red solid;
}

.feature {
  /* display: flex;
  flex-direction: column; */
  /* justify-content: center; */
  /* height: 39.6875rem; */
  flex: 1;
  /* padding-top: 2rem;
  padding-left: 2rem;
  padding-right: 2rem; */
  /* padding-bottom: 11.6875; */
  padding: 2rem;
  margin: 0px 1.25rem;
  background-color: white;
  border: 1px greenyellow solid;
}

.feature .center {
  border: 1px red solid;
}

.feature .image-container {
  /* display: flex; */
  /* flex: 1; */
  width: 90%;
  height: 65%;
  margin: 0 auto;
  border: 1px red dashed;
}

.feature .content {
  height: 9.6875rem;
  padding: 0 2.5rem;
  /* width: 90%; */
  /* margin: 0 auto; */
}

.feature h2 {
  padding-top: 2.5rem;
  padding-bottom: .5rem;
  font-family: 'Roboto';
  font-size: 2.25rem;
  font-weight: bold;
  color: #4a4a4a;
  line-height: 1.2;
}

.feature h3 {
  font-size: 1rem;
  font-family: 'Roboto';
  line-height: 1.2;
  font-weight: 300;
  color: #4a4a4a;
}

@media only screen and (max-width: 890px) {
  .feature h2 {
    font-size: 1.125rem;
    line-height: 1.3;
    font-weight: normal;
  }

  .feature h3 {
    font-size: .875rem;
    line-height: 1.4;
  }
}

@media only screen and (max-width: 760px) {
  #features-section {
    flex-flow: row;
    padding: 0;
  }

  .feature {
    margin: 0.5rem;
    padding: 1.25rem 1rem 0 1rem;
  }

  .feature .center {
    /* padding: 0; */
    /* margin: 0; */
  }

  .feature .image-container {
  
}

  .feature img {
    object-fit: cover;
    width: 18.75rem;
    height: 18.75rem;
    margin: 0 auto;
  }

  .feature .content {
    padding: 0.5rem 1rem 0.5rem;
  }

  .feature h2 {
    font-weight: 800;
    font-size: 1.5rem;
    padding-top: 0.5rem;
    /* padding-bottom: .5rem; */
  }

  .feature h3 {
    font-weight: 400;
  }

  .feature h2, .feature h3 {
    text-align: left;
  }
}

@media only screen and (max-width: 450px) {
  #features-section {
    flex-flow: column;
    /* padding: 0; */
  }

  .feature {
    margin: 0;
  }

  .feature .image-container {
    width: 100%;
    height: 65%;
  }

  .feature img {
    /* object-fit: contain; */
    object-fit: cover;
    width: 100%;
    height: 15.75rem;
    margin: 0 auto;
  }

  .feature .content {
    height: auto;
    padding: 1rem 1.5rem 1.875rem;
    display: flex;
    flex-direction: column;
  }

  .feature h2 {
    font-weight: 700;
    /* font-size: 1.125rem; */
    font-size: 1.5rem;
    padding-top: 0.5rem;
    line-height: 1.4;
  }

  .feature h3 {
    font-weight: 400;
    /* font-size: 0.875rem; */
    font-size: 1rem;
    /* padding-bottom: 1.875rem; */
    line-height: 1.4;
  }

  .feature h2, .feature h3 {
    text-align: center;
  }
}

/* Filters Section */

#filters-section {
  display: flex;
  flex-direction: column;
  padding: 4rem 0;
  background-color: #4a4a4a;
}

#filters-section .content {
  padding: 0 .625rem;
  margin-bottom: 5rem;
}

#filters-section .content h2 {
  font-size: 2.25rem;
  font-weight: bold;
  color: white;
}

#filters-section .content h3 {
  font-size: 1rem;
  line-height: 1.4;
  font-weight: 300;
  color: white;
}

#filters-section .images-container {
  max-width: 100%;
  padding: 0 1%;
  display: inline-flex;
}


@media only screen and (max-width: 760px) {
  #filters-section {
    padding: 1rem 0 0 0;
  }

  #filters-section .content {
    margin-top: 1.5rem;
    margin-bottom: 2.3rem;
  }

  #filters-section .content h2 {
    padding-bottom: .625rem;
    font-size: 1.8rem;
    line-height: 1.3;
    font-weight: 600;
    letter-spacing: 0.05em;
  }

  #filters-section .content h3 {
    font-size: .875rem;
    line-height: 1.4;
  }

  #filters-section .images-container {
    padding: 0;
    max-width: 100%;
  }

  #filters-section .extra {
    /* display: none; */
  }
}

/* Quotes Section */

#quotes-section {
  background-color: #f3f3f3;
  padding: 5rem 0;
  border: 1px red solid;
  display: flex;
}

#quotes-section content {
  border: 1px greenyellow solid;
}

#quotes-section .quote {
  float: left;
  padding-right: 1.875rem;
  padding-left: 26rem;
  font-family: "Unna", serif;
  font-size: 1.875rem;
  line-height: 1.1;
  font-style: italic;
  color: #4a4a4a;
  border: 1px red solid;
}

#quotes-section .quote-citation {
  height: 1.875rem;
  border: 1px red solid;
}

@media only screen and (max-width: 760px) {

  #quotes-section {
    display: flex;
    /* flex-direction: row; */
    /* width: 100%; */
    height: 4rem;
    padding: 2rem 2rem;
    align-items: center;
  }

  #quotes-section content {
    /* display: flex; */
    /* align-items: center; */
    /* align-content: center; */
  }

  #quotes-section .quote {
    display: block;
    float: left;
    padding-left: 0;
    padding-right: 1rem;
    width: 80%;
    font-size: 1.7rem;
    line-height: 1.2;
    text-align: left;
  }

  #quotes-section span {
    /* display: block; */
    /* float: left; */
    /* width: 65%; */
    /* text-align: left; */
    /* padding: 0; */
  }

  #quotes-section .quote-citation {
    /* display: block; */
    /* width: 20%; */
    border: 1px red solid;
    /* padding-top: 1rem; */
    /* margin: auto; */
  }

  #quotes-section img {
    float: right;
    padding-top: 0.2rem;
    /* margin-top: 5rem; */
  }
}

/* Footer */

footer {
  background-color: #9b9b9b;
  /* padding: 1.5rem 2rem; */
  padding: 0 2rem;
  border: 1px red solid;
}

footer .content {
  color: white;
  display: flex;
  height: 3.875rem;
  align-items: center;
  font-size: 0.75rem;
  font-family: 'Roboto';
}

footer .copyright {
  flex-grow: 1;
}

@media only screen and (max-width: 760px) {
  footer .content {
    font-size: .625rem;
    height: 2.5rem;
  }
}

